elearningProject/force-app/main/default/objects/Unit_progress__c/Unit_progress__c.object-meta.xml
<CustomObject>
    <label>Unit progress</label>
    <nameField>
        <displayFormat>OF-{0000}</displayFormat>
        <label>Unit progress Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Units progress</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>