elearningProject/force-app/main/default/objects/Unit_progress__c/fields/Module_Progress__c.field-meta.xml
<CustomField>
    <fullName>Module_Progress__c</fullName>
    <label>Module Progress</label>
    <referenceTo>Module_Progress__c</referenceTo>
    <relationshipLabel>Units progress</relationshipLabel>
    <relationshipName>Units_progress</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>