elearningProject/force-app/main/default/objects/Unit_progress__c/fields/Num_of_tries__c.field-meta.xml
<CustomField>
    <fullName>Num_of_tries__c</fullName>
    <label>Num of tries</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>