elearningProject/force-app/main/default/objects/Unit_progress__c/fields/Student_Unit_Score__c.field-meta.xml
<CustomField>
    <fullName>Student_Unit_Score__c</fullName>
    <label>Student Unit Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>