elearningProject/force-app/main/default/objects/Unit_progress__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Units progress</relationshipLabel>
    <relationshipName>Units_progress</relationshipName>
    <type>Lookup</type>
</CustomField>