elearningProject/force-app/main/default/objects/Unit_progress__c/fields/Unit_completed__c.field-meta.xml
<CustomField>
    <fullName>Unit_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unit completed</label>
    <type>Checkbox</type>
</CustomField>